# simplesquirrel

./: CMakeLists.txt  README.md
include/simplesquirrel/: args.hpp  class.hpp  object.hpp
